libs/ui/dialogs/kis_dlg_internal_color_selector.cpp
@@ -278,3 +278,9 @@ void KisDlgInternalColorSelector::slotSetColorFromHex()
     slotColorUpdated(m_d->sRGB);
 }
 
+void KisDlgInternalColorSelector::showEvent(QShowEvent *event)
+{
+    updateAllElements(0);
+    QDialog::showEvent(event);
+}
+
