libs/ui/widgets/kis_spinbox_color_selector.cpp
@@ -33,8 +33,10 @@
 
 struct KisSpinboxColorSelector::Private
 {
+    QList <QLabel*> labels;
     QList <KisIntParseSpinBox*> spinBoxList;
     QList <KisDoubleParseSpinBox*> doubleSpinBoxList;
+    QFormLayout *layout {0};
     KoColor color;
     const KoColorSpace *cs {0};
     bool chooseAlpha {false};
@@ -45,21 +47,16 @@ KisSpinboxColorSelector::KisSpinboxColorSelector(QWidget *parent)
     , m_d(new Private)
 {
     this->setSizePolicy(QSizePolicy::Expanding,QSizePolicy::Expanding);
-    KoColor color = KoColor();
-    m_d->color = color;
-    slotSetColorSpace(m_d->color.colorSpace());
+    m_d->layout = new QFormLayout(this);
 }
 KisSpinboxColorSelector::~KisSpinboxColorSelector()
 {
-
 }
 
 void KisSpinboxColorSelector::slotSetColor(KoColor color)
 {
     m_d->color = color;
-    if (m_d->color.colorSpace() != m_d->cs) {
-        slotSetColorSpace(m_d->color.colorSpace());
-    }
+    slotSetColorSpace(m_d->color.colorSpace());
     updateSpinboxesWithNewValues();
 }
 
@@ -69,28 +66,45 @@ void KisSpinboxColorSelector::slotSetColorSpace(const KoColorSpace *cs)
         return;
     }
 
-    m_d->cs = KoColorSpaceRegistry::instance()->colorSpace(cs->colorModelId().id(), cs->colorDepthId().id(), cs->profile());
+    m_d->cs = cs;
 
-    //remake spinboxes
-    if (this->layout()) {
-        qDeleteAll(this->children());
+    // remake spinboxes
+    delete m_d->layout;
+    m_d->layout = new QFormLayout(this);
+    Q_FOREACH(QObject *o, m_d->labels) {
+        o->deleteLater();
     }
+    Q_FOREACH(QObject *o, m_d->spinBoxList) {
+        o->deleteLater();
+    }
+    Q_FOREACH(QObject *o, m_d->doubleSpinBoxList) {
+        o->deleteLater();
+    }
+
+    Q_FOREACH(QObject *o, m_d->labels) {
+        o->deleteLater();
+    }
+
+    m_d->labels.clear();
     m_d->spinBoxList.clear();
     m_d->doubleSpinBoxList.clear();
 
-    QFormLayout *layout = new QFormLayout(this);
     QList<KoChannelInfo *> channels = KoChannelInfo::displayOrderSorted(m_d->cs->channels());
     Q_FOREACH (KoChannelInfo* channel, channels) {
+
         QString inputLabel = channel->name();
         QLabel *inlb = new QLabel;
+        m_d->labels << inlb;
         inlb->setText(inputLabel);
+
         switch (channel->channelValueType()) {
         case KoChannelInfo::UINT8: {
             KisIntParseSpinBox *input = new KisIntParseSpinBox(this);
             input->setMinimum(0);
             input->setMaximum(0xFF);
             m_d->spinBoxList.append(input);
-            layout->addRow(inlb,input);
+            m_d->layout->addRow(inlb,input);
+
             if (input) {
                 connect(input, SIGNAL(valueChanged(int)), this,  SLOT(slotUpdateFromSpinBoxes()));
             }
@@ -106,7 +120,7 @@ void KisSpinboxColorSelector::slotSetColorSpace(const KoColorSpace *cs)
             input->setMinimum(0);
             input->setMaximum(0xFFFF);
             m_d->spinBoxList.append(input);
-            layout->addRow(inlb,input);
+            m_d->layout->addRow(inlb,input);
             if (input) {
                 connect(input, SIGNAL(valueChanged(int)), this,  SLOT(slotUpdateFromSpinBoxes()));
             }
@@ -122,7 +136,7 @@ void KisSpinboxColorSelector::slotSetColorSpace(const KoColorSpace *cs)
             input->setMinimum(0);
             input->setMaximum(0xFFFFFFFF);
             m_d->spinBoxList.append(input);
-            layout->addRow(inlb,input);
+            m_d->layout->addRow(inlb,input);
             if (input) {
                 connect(input, SIGNAL(valueChanged(int)), this,  SLOT(slotUpdateFromSpinBoxes()));
             }
@@ -140,7 +154,7 @@ void KisSpinboxColorSelector::slotSetColorSpace(const KoColorSpace *cs)
             input->setMaximum(KoColorSpaceMathsTraits<half>::max);
             input->setSingleStep(0.1);
             m_d->doubleSpinBoxList.append(input);
-            layout->addRow(inlb,input);
+            m_d->layout->addRow(inlb,input);
             if (input) {
                 connect(input, SIGNAL(valueChanged(double)), this,  SLOT(slotUpdateFromSpinBoxes()));
             }
@@ -158,7 +172,7 @@ void KisSpinboxColorSelector::slotSetColorSpace(const KoColorSpace *cs)
             input->setMaximum(KoColorSpaceMathsTraits<float>::max);
             input->setSingleStep(0.1);
             m_d->doubleSpinBoxList.append(input);
-            layout->addRow(inlb,input);
+            m_d->layout->addRow(inlb,input);
             if (input) {
                 connect(input, SIGNAL(valueChanged(double)), this,  SLOT(slotUpdateFromSpinBoxes()));
             }
@@ -174,7 +188,7 @@ void KisSpinboxColorSelector::slotSetColorSpace(const KoColorSpace *cs)
         }
 
     }
-    this->setLayout(layout);
+    setLayout(m_d->layout);
 }
 
 void KisSpinboxColorSelector::createColorFromSpinboxValues()
